[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/SplatParticles.gd" type="Script" id=1]
[ext_resource path="res://Assets/white_dot.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/inv_white_dot_mask.png" type="Texture2D" id=3]

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id=6]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
params_depth_draw_mode = 3
params_billboard_mode = 3
params_billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = SubResource( 7 )

[sub_resource type="Curve" id=1]
max_value = 2.0
_data = [ Vector2( 0, 1.49059 ), 0.0, -0.0179864, 0, 0, Vector2( 0.918478, 0 ), -3.16623, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticleProcessMaterial" id=3]
flag_rotate_y = true
direction = Vector3( 0, 1, 0 )
spread = 60.0
flatness = 0.5
initial_velocity = 4.0
angle = 180.0
angle_random = 1.0
scale = 0.25
scale_random = 0.75
scale_curve = SubResource( 2 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 0.25, 0.25 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SubViewport/PartSprite/PointLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.01 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SubViewport/PartSprite/PointLight2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 25, 25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SubViewport/PartSprite/Sprite2:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 60, 40 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "splort"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SubViewport/PartSprite/PointLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 3.36359, 1 ),
"update": 0,
"values": [ 0.01, 1.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SubViewport/PartSprite/PointLight2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 33, 25 ) ]
}

[node name="SplatSpriteParticles" type="GPUParticles3D"]
material_override = SubResource( 6 )
emitting = false
amount = 12
one_shot = true
explosiveness = 0.93
randomness = 0.61
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true
autostart = true

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2( 50, 50 )
transparent_bg = true
render_target_v_flip = true

[node name="PartSprite" type="Node2D" parent="SubViewport"]

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/PartSprite"]
light_mask = 2
texture = ExtResource( 2 )
centered = false
offset = Vector2( 5, 5 )

[node name="Sprite2" type="Sprite2D" parent="SubViewport/PartSprite"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 60, 40 )

[node name="PointLight2D" type="PointLight2D" parent="SubViewport/PartSprite"]
visible = false
texture = ExtResource( 3 )
offset = Vector2( 25, 25 )
texture_scale = 0.01
mode = 3
range_item_cull_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/splort = SubResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
